2005-02-19  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/hal/hal.c (rthal_release_linux_irq): Call free_irq()
	outside of the critical section.

	* arch/*/hal/hal.c (rthal_request_linux_irq,
	rthal_request_linux_irq): Use spinlock_irq form.

	* skins/rtai/syscall.c, nucleus/fusion.c: Mark start/stop timer
	services as "lostage".

	* arch/i386/hal/hal.c (rthal_request_timer): Exit the critical
	section before calling rthal_request_linux_irq().

	* arch/*/hal/hal.c: Discard useless and somewhat bugous
	rthal_proc_lock.

	* nucleus/Kconfig: Add LTT filter configuration.

2005-02-18  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.9-r9c3.

	* nucleus: Add LTT support infrastructure.

	* configure.in: Discard CONFIG_RTAI_OPT_TIMESTAMPS; it has been
	superseded by CONFIG_RTAI_OPT_LTT bringing in full LTT support.

2005-02-18  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* nucleus/synch.c (xnsynch_sleep_on): Fix reordering of the claim
	queue in the PIP enforcement code.

2005-02-17  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (rtai_sysentry): Make sure to properly run the
	internal nucleus syscalls even when issued over the RTAI domain,
	providing the required switch to secondary mode automagically.

	* arch/i386/hal/GNUmakefile.am: Add smi.h to the source list.

2005-02-15  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/queue.c (rt_queue_free): Make sure we don't fiddle
	with the refcount before the pointer validity has been
	checked. Use xnheap_test_and_free() for that purpose.

	* nucleus/heap.c (xnheap_test_and_free): Provide a mean for client
	code to further check freed data after the mere addressing issues
	have been scanned by the heap manager.

2005-02-15  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* scripts/rtai-config.in: Add --cross-compile option and normal
	exit for --help option.

	* GNUmakefile.am (dev devices): Create $(DESTDIR)/dev if it does
	not exist.
